
option java_package = "com.google.android.finsky";
option java_multiple_files = true;

message experimentRequestData {
  optional DeviceData  deviceDataValue = 1;
  repeated ExperimentsInfo experimentsInfo = 2;
  optional bytes  bytesTag = 3;
  optional action  actionType = 4;
  optional int32  unknowFieldG = 5;
  optional string  expPkgName = 7;
}

enum action {
    UNSPECIFIED =0;
    PERIODIC =  1;
    ADAPTIVE =  2;
    GCM_PUSH = 3;
    APPLICATION_PUSH=  4;
    APPLICATION_PUSH_RETRY=11;
    NEW_USER=  5;
    NEW_APPLICATION=  6;
    NEW_REGISTER_VERSION=  7;
    NEW_REGISTER_OTHER=  8;
    MOBDOG= 9;
    RETRY_AFTER= 10;
    NEW_USER_SYNC= 12;
    NEW_APPLICATION_SYNC= 13;
    NEW_REGISTER_VERSION_SYNC= 14;
    NEW_REGISTER_OTHER_SYNC= 15;
    NEW_APP_PROPERTIES= 16;
    GMSCORE_SAFEBOOT= 17;
    CHECK_IN= 18;
    FORCE_SYNC= 19;
    FLAG_CORRUPTION= 20;
    FLAG_OVERRIDE= 21;
    MOBILE_UTILITIES= 22;
}

message ExperimentsInfo {
  optional ExperimentVersion  experimentVersionValue = 1;
  optional bytes  unKnowBytesC = 2;
  repeated ApplicationTag applicationTagValue =3;
  optional bytes  tokensTag = 4;
}

message UnknowMsg {
  optional int32 field1 = 1;
}

message ApplicationTag {
  optional int64  partitionId = 1;
  optional bytes  tag = 2;
}

message ExperimentVersion {
  optional string  expPkgName = 1;
  optional int64  version = 2;
  optional ExperimentFlag  experimentFlagValue = 3;
  optional sfixed64  baselineCL = 4;
  optional string  pkgName = 5;
}

message ExperimentFlag {
  optional fixed64  flag = 1;
}

message DeviceData {
  optional int64  hasAccount = 2;
  optional ExpDeviceInfoWrapper  expDeviceInfoWrapperValue = 4;
  optional bytes  unknowEmptyE = 6;
  optional bool  unknowFlagf = 7;
  optional DeviceDataEmptyA  unknkowFieldG = 8;
}

message DeviceDataEmptyA {
  optional bytes  unknowFieldB = 1;
}

message ExpDeviceInfoWrapper{
  optional int32 unknowFieldb = 1;
  optional ExpDeviceInfo  expDeviceInfoValue = 2;
}


message ExpDeviceInfo {
  optional int64  androidId = 1;
  optional int32  sdkInt = 3;
  optional string  model = 4;
  optional string  product = 5;
  optional string  buildId = 6;
  optional string  buildDevice = 9;
  optional string  unknowEmpty = 10;
  optional string  locale = 11;
  optional string  country = 12;
  optional string  manufacturer = 13;
  optional string  fingerprint = 17;
  repeated string  supportAbis = 31;
}


message ExperimentResponseData {
  repeated ExperimentsDataWrapper experiments =1;
  optional bytes  bytesTag = 2;
  optional int64  servingVersion = 4;
}

message ExperimentsDataWrapper {
  optional ExperimentVersion  experimentVersionValue = 1;
  repeated ExpFlagsGroup expFlagsGroupValue =2; //c
  optional bytes  experimentToken = 3;
  optional string  serverToken = 4;
  optional bytes  tokensTag = 7;
}

//message autv {
//  optional experimentVersion  experimentVersionValue = 1;
//}

message ExpFlagsGroup {
  optional ApplicationTag  applicationTagValue = 1;
  repeated ExpFlag expFlags =2;
}

message ExpFlag {
  optional string flagName = 1;
  optional int64  longValue = 2;
  optional bool  boolValue = 3;
  optional double  doubleValue = 4;
  optional string  stringValue = 5;
  optional ExtensionValue  extensionValueValue = 6;
  optional int32  valueType = 9; //enum
}

message ExtensionValue {
  optional bytes  mvalue = 1;
}

//----------------------------experimentsFlags protostore message----
message ExperimentsFlagsProto {
    optional string  expeIntroduce = 2; //b
    optional bytes  experimentToken = 3; //c
    optional string  serverToken = 1; //d
    optional bool  unknowFlagB = 8; //g
    optional int64  servingVersion = 9; //h
    repeated FlagValueProto flagValues =4; //e
}

message FlagValueProto {
    oneof c {
        fixed64 intVal = 1;
        bool boolVal = 2;
        double floatVal = 3;
        string stringVal = 4;
        bytes extensionVal = 5;
    }
    optional string  name = 10;
}

message ExperimentTokenStore {
    repeated bytes  experimentToken = 2; //c
}





